--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -35,7 +35,8 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    background-color: hsl(var(--background));
+    color: hsl(var(--foreground));
   }
 
   .dark {
@@ -66,7 +67,7 @@
   }
 
   * {
-    @apply border-border;
+    border-color: hsl(var(--border));
   }
 }
 
